--- a/bbs-core/src/main/resources/application.properties
+++ b/bbs-core/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data_warehouse
+spring.datasource.username=root
+spring.datasource.password=root
