--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ project(":bbs-core") {
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-configuration-processor'
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
     }
