--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,11 @@ project(":bbs-web") {
     dependencies {
         implementation project(':bbs-core')
         implementation 'org.springframework.boot:spring-boot-starter-web'
+
+        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+        implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+//        https://helloworld-japan.tistory.com/17
+        implementation 'org.webjars:bootstrap:5.1.3'
     }
 
     tasks.register("prepareKotlinBuildScriptModel"){}
@@ -80,6 +85,10 @@ project(":bbs-admin") {
     dependencies {
         implementation project(':bbs-core')
         implementation 'org.springframework.boot:spring-boot-starter-web'
+
+        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+        implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+        implementation 'org.webjars:bootstrap:5.1.3'
     }
 
     tasks.register("prepareKotlinBuildScriptModel"){}
