--- a/bbs-web/src/main/resources/application.properties
+++ b/bbs-web/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+
+server.port=9999
