--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
     }
 }
 
-
-allprojects { }
+allprojects {
+}
 
 subprojects {
     apply plugin: 'java-library'
@@ -32,6 +32,13 @@ subprojects {
         mavenCentral()
     }
 
+//
+//    configurations{
+//        all {
+//            //logback과의 충돌 방지
+//            exclude group: 'ch.qos.logback', module: 'logback-classic'
+//        }
+//    }
 
     dependencies {
 
@@ -44,14 +51,18 @@ subprojects {
         implementation 'org.apache.commons:commons-collections4:4.4'
 
 
+        // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+//        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+//        implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
+
+
         // logging
-        implementation 'org.tinylog:tinylog-api:2.6.0'
+//        implementation 'org.tinylog:tinylog-api:2.6.0'
         implementation 'org.tinylog:tinylog-impl:2.6.0'
-        implementation 'org.slf4j:slf4j-api:1.7.36'
-        runtimeOnly 'org.tinylog:slf4j-tinylog:2.6.0'
+//        implementation 'org.slf4j:slf4j-api:1.7.36'
+//        implementation 'org.tinylog:slf4j-tinylog:2.6.0'
 
 
-        implementation 'org.springframework.boot:spring-boot-starter'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 }
@@ -62,7 +73,9 @@ project(":bbs-core") {
     jar.enabled = true
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//        implementation 'org.springframework.boot:spring-boot-starter'
+
+        implementation('org.springframework.boot:spring-boot-starter-data-jpa')
         implementation 'org.springframework.boot:spring-boot-configuration-processor'
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
@@ -75,7 +88,7 @@ project(":bbs-web") {
 
     dependencies {
         implementation project(':bbs-core')
-        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation('org.springframework.boot:spring-boot-starter-web')
 
         implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
         implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
