--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,8 @@ project(":bbs-web") {
         implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 //        https://helloworld-japan.tistory.com/17
         implementation 'org.webjars:bootstrap:5.1.3'
+        implementation 'org.webjars:jquery:3.6.0'
+
     }
 
     tasks.register("prepareKotlinBuildScriptModel"){}
@@ -107,7 +109,7 @@ project(":bbs-admin") {
         implementation 'org.springframework.boot:spring-boot-starter-web'
 
         implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-        implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+        implementation 'nz.net.ultraq.thymeleaf:thylsmeleaf-layout-dialect'
         implementation 'org.webjars:bootstrap:5.1.3'
     }
 
