--- a/build.gradle
+++ b/build.gradle
@@ -110,9 +110,15 @@ project(":bbs-admin") {
         implementation project(':bbs-core')
         implementation 'org.springframework.boot:spring-boot-starter-web'
 
+        implementation('org.springframework.boot:spring-boot-starter-web')
+
+        implementation("org.springframework.boot:spring-boot-starter-security")
+
         implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-        implementation 'nz.net.ultraq.thymeleaf:thylsmeleaf-layout-dialect'
+        implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+//        https://helloworld-japan.tistory.com/17
         implementation 'org.webjars:bootstrap:5.1.3'
+        implementation 'org.webjars:jquery:3.6.0'
     }
 
     tasks.register("prepareKotlinBuildScriptModel"){}
